# mcp-sequentialthinking-tools-databricks

./: .gitignore  MIGRATION.md  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  app.yaml  databricks.yml  pyproject.toml  requirements.txt
hooks/: apps_build.py
src/mcp_sequentialthinking_databricks/: __init__.py  app.py  main.py  schema.py  server.py  types.py
src/mcp_sequentialthinking_databricks/static/: index.html
