[project]
name = "mcp-sequentialthinking-databricks"
version = "0.0.4"
description = "MCP Sequential Thinking Tools for Databricks Apps"
readme = "README.md"
authors = [
    { name = "Scott Spence", email = "" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.10.0",
    "uvicorn>=0.34.2",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]

[tool.hatch.build.hooks.custom]
path = "hooks/apps_build.py"

[project.scripts]
mcp-sequentialthinking-databricks = "mcp_sequentialthinking_databricks.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sequentialthinking_databricks"]
